# multiomics_adsd

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: testing.yml
src/momics_ad/: __main__.py
src/momics_ad/commands/: make_plots.py  pls_da.py  sex_diff.py  snf.py
src/momics_ad/figures/: plots.py
src/momics_ad/io/: read.py  subset.py
src/momics_ad/stats/: multi.py  pls.py  sd.py  snf.py
src/momics_ad/stats/pls/: __init__.py
src/momics_ad/test/: snf.R
tests/: test_plsda.py
