[tool.poetry]
name = "momics_ad"
version = "0.1.0"
description = "Multiomics sex difference analysis"
license = "GNU General Public License v3.0"
authors = ["Tomas Gonzalez Zarzar <tomasgzarzar@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tomszar/multiomics_adsd"
keywords = ["multi-omics", "sex differences"]
classifiers = [
  "Pogramming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
packages = [{ include = "momics_ad", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
scikit-learn = "^1.5"
metabo_adni = "0.5.8"

[tool.poetry.scripts]
pls_da = "momics_ad.commands.pls_da:main"
sex_diff = "momics_ad.commands.sex_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
venv = "momics_ad_env"
venvPath = "/home/tomas/miniforge3/envs/"

