[tool.poetry]
name = "momics_ad"
version = "0.1.0"
description = "Multiomics sex difference analysis"
license = "GPL-3.0-or-later"
authors = ["Tomas Gonzalez Zarzar <tomasgzarzar@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tomszar/multiomics_adsd"
keywords = ["multi-omics", "sex differences"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
packages = [{ include = "momics_ad", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
scikit-learn = "^1.5"
matplotlib = "^3.9"
metabo_adni = "0.5.8"
SNFpy = "0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
numpy = "^2.2"

[tool.poetry.scripts]
pls_da = "momics_ad.commands.pls_da:main"
sex_diff = "momics_ad.commands.sex_diff:main"
make_plots = "momics_ad.commands.make_plots:main"
snf = "momics_ad.commands.snf:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
venv = "momics_ad_env"
venvPath = "/home/tomas/miniforge3/envs/"
