[metadata]
name = momics_ad
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3
install_requires = 
    pandas >= 1.4.2
    metabo_adni >= 0.5.2
    scikit-learn >= 1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        pls_da = momics_ad.__main__:main